products/ITER/plugins/org.csstudio.utility.dbdparser/src/org/csstudio/utility/dbdparser/antlr/DbdFileParser.java
// $ANTLR 3.4 cs-studio/products/ITER/plugins/org.csstudio.utility.dbdparser.test/src/org/csstudio/utility/dbdparser/antlr/DbdFile.g 2013-10-04 12:02:59

package org.csstudio.utility.dbdparser.antlr;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class DbdFileParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "BREAKTABLE", "CHOICE", "COMMENT", "C_declaration", "DEVICE", "DIGIT", "DRIVER", "ENG", "ESC_SEQ", "EXPONENT", "FIELD", "FLOAT", "FUNCTION", "HEX_DIGIT", "INCLUDE", "KEY", "MENU", "NAME", "OCTAL_ESC", "PATH", "RAW", "RECORDTYPE", "REGISTRAR", "RULE", "STRING", "String", "TYPE", "UNICODE_ESC", "UnquotedString", "VALUE", "VARIABLE", "WHITESPACE", "'('", "')'", "','", "'addpath'", "'breaktable'", "'choice'", "'device'", "'driver'", "'field'", "'function'", "'include'", "'menu'", "'path'", "'recordtype'", "'registrar'", "'variable'", "'{'", "'}'"
    };

    public static final int EOF=-1;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int BREAKTABLE=4;
    public static final int CHOICE=5;
    public static final int COMMENT=6;
    public static final int C_declaration=7;
    public static final int DEVICE=8;
    public static final int DIGIT=9;
    public static final int DRIVER=10;
    public static final int ENG=11;
    public static final int ESC_SEQ=12;
    public static final int EXPONENT=13;
    public static final int FIELD=14;
    public static final int FLOAT=15;
    public static final int FUNCTION=16;
    public static final int HEX_DIGIT=17;
    public static final int INCLUDE=18;
    public static final int KEY=19;
    public static final int MENU=20;
    public static final int NAME=21;
    public static final int OCTAL_ESC=22;
    public static final int PATH=23;
    public static final int RAW=24;
    public static final int RECORDTYPE=25;
    public static final int REGISTRAR=26;
    public static final int RULE=27;
    public static final int STRING=28;
    public static final int String=29;
    public static final int TYPE=30;
    public static final int UNICODE_ESC=31;
    public static final int UnquotedString=32;
    public static final int VALUE=33;
    public static final int VARIABLE=34;
    public static final int WHITESPACE=35;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public DbdFileParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public DbdFileParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return DbdFileParser.tokenNames; }
    public String getGrammarFileName() { return "cs-studio/products/ITER/plugins/org.csstudio.utility.dbdparser.test/src/org/csstudio/utility/dbdparser/antlr/DbdFile.g"; }


    public static class top_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "top"
    // cs-studio/products/ITER/plugins/org.csstudio.utility.dbdparser.test/src/org/csstudio/utility/dbdparser/antlr/DbdFile.g:40:1: top : program ;
    public final DbdFileParser.top_return top() throws RecognitionException {
        DbdFileParser.top_return retval = new DbdFileParser.top_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        DbdFileParser.program_return program1 =null;



        try {
            // cs-studio/products/ITER/plugins/org.csstudio.utility.dbdparser.test/src/org/csstudio/utility/dbdparser/antlr/DbdFile.g:40:5: ( program )
            // cs-studio/products/ITER/plugins/org.csstudio.utility.dbdparser.test/src/org/csstudio/utility/dbdparser/antlr/DbdFile.g:40:7: program
            {
            root_0 = (Object)adaptor.nil();


            pushFollow(FOLLOW_program_in_top234);
            program1=program();

            state._fsp--;

            adaptor.addChild(root_0, program1.getTree());

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "top"


    public static class program_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "program"
    // cs-studio/products/ITER/plugins/org.csstudio.utility.dbdparser.test/src/org/csstudio/utility/dbdparser/antlr/DbdFile.g:42:1: program : ( pathdef | include | menu | recordtype | device | driver | registrar | variable | function | breaktable )* ;
    public final DbdFileParser.program_return program() throws RecognitionException {
        DbdFileParser.program_return retval = new DbdFileParser.program_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        DbdFileParser.pathdef_return pathdef2 =null;

        DbdFileParser.include_return include3 =null;

        DbdFileParser.menu_return menu4 =null;

        DbdFileParser.recordtype_return recordtype5 =null;

        DbdFileParser.device_return device6 =null;

        DbdFileParser.driver_return driver7 =null;

        DbdFileParser.registrar_return registrar8 =null;

        DbdFileParser.variable_return variable9 =null;

        DbdFileParser.function_return function10 =null;

        DbdFileParser.breaktable_return breaktable11 =null;



        try {
            // cs-studio/products/ITER/plugins/org.csstudio.utility.dbdparser.test/src/org/csstudio/utility/dbdparser/antlr/DbdFile.g:42:9: ( ( pathdef | include | menu | recordtype | device | driver | registrar | variable | function | breaktable )* )
            // cs-studio/products/ITER/plugins/org.csstudio.utility.dbdparser.test/src/org/csstudio/utility/dbdparser/antlr/DbdFile.g:42:11: ( pathdef | include | menu | recordtype | device | driver | registrar | variable | function | breaktable )*
            {
            root_0 = (Object)adaptor.nil();


            // cs-studio/products/ITER/plugins/org.csstudio.utility.dbdparser.test/src/org/csstudio/utility/dbdparser/antlr/DbdFile.g:42:11: ( pathdef | include | menu | recordtype | device | driver | registrar | variable | function | breaktable )*
            loop1:
            do {
                int alt1=11;
                switch ( input.LA(1) ) {
                case 39:
                case 48:
                    {
                    alt1=1;
                    }
                    break;
                case 46:
                    {
                    alt1=2;
                    }
                    break;
                case 47:
                    {
                    alt1=3;
                    }
                    break;
                case 49:
                    {
                    alt1=4;
                    }
                    break;
                case 42:
                    {
                    alt1=5;
                    }
                    break;
                case 43:
                    {
                    alt1=6;
                    }
                    break;
                case 50:
                    {
                    alt1=7;
                    }
                    break;
                case 51:
                    {
                    alt1=8;
                    }
                    break;
                case 45:
                    {
                    alt1=9;
                    }
                    break;
                case 40:
                    {
                    alt1=10;
                    }
                    break;

                }

                switch (alt1) {
            	case 1 :
            	    // cs-studio/products/ITER/plugins/org.csstudio.utility.dbdparser.test/src/org/csstudio/utility/dbdparser/antlr/DbdFile.g:42:13: pathdef
            	    {
            	    pushFollow(FOLLOW_pathdef_in_program245);
            	    pathdef2=pathdef();

            	    state._fsp--;

            	    adaptor.addChild(root_0, pathdef2.getTree());

            	    }
            	    break;
            	case 2 :
            	    // cs-studio/products/ITER/plugins/org.csstudio.utility.dbdparser.test/src/org/csstudio/utility/dbdparser/antlr/DbdFile.g:42:23: include
            	    {
            	    pushFollow(FOLLOW_include_in_program249);
            	    include3=include();

            	    state._fsp--;

            	    adaptor.addChild(root_0, include3.getTree());

            	    }
            	    break;
            	case 3 :
            	    // cs-studio/products/ITER/plugins/org.csstudio.utility.dbdparser.test/src/org/csstudio/utility/dbdparser/antlr/DbdFile.g:42:33: menu
            	    {
            	    pushFollow(FOLLOW_menu_in_program253);
            	    menu4=menu();

            	    state._fsp--;

            	    adaptor.addChild(root_0, menu4.getTree());

            	    }
            	    break;
            	case 4 :
            	    // cs-studio/products/ITER/plugins/org.csstudio.utility.dbdparser.test/src/org/csstudio/utility/dbdparser/antlr/DbdFile.g:42:40: recordtype
            	    {
            	    pushFollow(FOLLOW_recordtype_in_program257);
            	    recordtype5=recordtype();

            	    state._fsp--;

            	    adaptor.addChild(root_0, recordtype5.getTree());

            	    }
            	    break;
            	case 5 :
            	    // cs-studio/products/ITER/plugins/org.csstudio.utility.dbdparser.test/src/org/csstudio/utility/dbdparser/antlr/DbdFile.g:42:53: device
            	    {
            	    pushFollow(FOLLOW_device_in_program261);
            	    device6=device();

            	    state._fsp--;

            	    adaptor.addChild(root_0, device6.getTree());

            	    }
            	    break;
            	case 6 :
            	    // cs-studio/products/ITER/plugins/org.csstudio.utility.dbdparser.test/src/org/csstudio/utility/dbdparser/antlr/DbdFile.g:42:62: driver
            	    {
            	    pushFollow(FOLLOW_driver_in_program265);
            	    driver7=driver();

            	    state._fsp--;

            	    adaptor.addChild(root_0, driver7.getTree());

            	    }
            	    break;
            	case 7 :
            	    // cs-studio/products/ITER/plugins/org.csstudio.utility.dbdparser.test/src/org/csstudio/utility/dbdparser/antlr/DbdFile.g:42:71: registrar
            	    {
            	    pushFollow(FOLLOW_registrar_in_program269);
            	    registrar8=registrar();

            	    state._fsp--;

            	    adaptor.addChild(root_0, registrar8.getTree());

            	    }
            	    break;
            	case 8 :
            	    // cs-studio/products/ITER/plugins/org.csstudio.utility.dbdparser.test/src/org/csstudio/utility/dbdparser/antlr/DbdFile.g:42:83: variable
            	    {
            	    pushFollow(FOLLOW_variable_in_program273);
            	    variable9=variable();

            	    state._fsp--;

            	    adaptor.addChild(root_0, variable9.getTree());

            	    }
            	    break;
            	case 9 :
            	    // cs-studio/products/ITER/plugins/org.csstudio.utility.dbdparser.test/src/org/csstudio/utility/dbdparser/antlr/DbdFile.g:42:94: function
            	    {
            	    pushFollow(FOLLOW_function_in_program277);
            	    function10=function();

            	    state._fsp--;

            	    adaptor.addChild(root_0, function10.getTree());

            	    }
            	    break;
            	case 10 :
            	    // cs-studio/products/ITER/plugins/org.csstudio.utility.dbdparser.test/src/org/csstudio/utility/dbdparser/antlr/DbdFile.g:42:105: breaktable
            	    {
            	    pushFollow(FOLLOW_breaktable_in_program281);
            	    breaktable11=breaktable();

            	    state._fsp--;

            	    adaptor.addChild(root_0, breaktable11.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "program"


    public static class pathdef_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "pathdef"
    // cs-studio/products/ITER/plugins/org.csstudio.utility.dbdparser.test/src/org/csstudio/utility/dbdparser/antlr/DbdFile.g:44:1: pathdef : ( 'path' | 'addpath' ) path -> ^( PATH path ) ;
    public final DbdFileParser.pathdef_return pathdef() throws RecognitionException {
        DbdFileParser.pathdef_return retval = new DbdFileParser.pathdef_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token string_literal12=null;
        Token string_literal13=null;
        DbdFileParser.path_return path14 =null;


        Object string_literal12_tree=null;
        Object string_literal13_tree=null;
        RewriteRuleTokenStream stream_48=new RewriteRuleTokenStream(adaptor,"token 48");
        RewriteRuleTokenStream stream_39=new RewriteRuleTokenStream(adaptor,"token 39");
        RewriteRuleSubtreeStream stream_path=new RewriteRuleSubtreeStream(adaptor,"rule path");
        try {
            // cs-studio/products/ITER/plugins/org.csstudio.utility.dbdparser.test/src/org/csstudio/utility/dbdparser/antlr/DbdFile.g:44:9: ( ( 'path' | 'addpath' ) path -> ^( PATH path ) )
            // cs-studio/products/ITER/plugins/org.csstudio.utility.dbdparser.test/src/org/csstudio/utility/dbdparser/antlr/DbdFile.g:44:11: ( 'path' | 'addpath' ) path
            {
            // cs-studio/products/ITER/plugins/org.csstudio.utility.dbdparser.test/src/org/csstudio/utility/dbdparser/antlr/DbdFile.g:44:11: ( 'path' | 'addpath' )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==48) ) {
                alt2=1;
            }
            else if ( (LA2_0==39) ) {
                alt2=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;

            }
            switch (alt2) {
                case 1 :
                    // cs-studio/products/ITER/plugins/org.csstudio.utility.dbdparser.test/src/org/csstudio/utility/dbdparser/antlr/DbdFile.g:44:13: 'path'
                    {
                    string_literal12=(Token)match(input,48,FOLLOW_48_in_pathdef295);  
                    stream_48.add(string_literal12);


                    }
                    break;
                case 2 :
                    // cs-studio/products/ITER/plugins/org.csstudio.utility.dbdparser.test/src/org/csstudio/utility/dbdparser/antlr/DbdFile.g:44:22: 'addpath'
                    {
                    string_literal13=(Token)match(input,39,FOLLOW_39_in_pathdef299);  
                    stream_39.add(string_literal13);


                    }
                    break;

            }


            pushFollow(FOLLOW_path_in_pathdef303);
            path14=path();

            state._fsp--;

            stream_path.add(path14.getTree());

            // AST REWRITE
            // elements: path
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 44:39: -> ^( PATH path )
            {
                // cs-studio/products/ITER/plugins/org.csstudio.utility.dbdparser.test/src/org/csstudio/utility/dbdparser/antlr/DbdFile.g:44:42: ^( PATH path )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(PATH, "PATH")
                , root_1);

                adaptor.addChild(root_1, stream_path.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "pathdef"


    public static class include_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "include"
    // cs-studio/products/ITER/plugins/org.csstudio.utility.dbdparser.test/src/org/csstudio/utility/dbdparser/antlr/DbdFile.g:46:1: include : 'include' filename -> ^( INCLUDE filename ) ;
    public final DbdFileParser.include_return include() throws RecognitionException {
        DbdFileParser.include_return retval = new DbdFileParser.include_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token string_literal15=null;
        DbdFileParser.filename_return filename16 =null;


        Object string_literal15_tree=null;
        RewriteRuleTokenStream stream_46=new RewriteRuleTokenStream(adaptor,"token 46");
        RewriteRuleSubtreeStream stream_filename=new RewriteRuleSubtreeStream(adaptor,"rule filename");
        try {
            // cs-studio/products/ITER/plugins/org.csstudio.utility.dbdparser.test/src/org/csstudio/utility/dbdparser/antlr/DbdFile.g:46:9: ( 'include' filename -> ^( INCLUDE filename ) )
            // cs-studio/products/ITER/plugins/org.csstudio.utility.dbdparser.test/src/org/csstudio/utility/dbdparser/antlr/DbdFile.g:46:11: 'include' filename
            {
            string_literal15=(Token)match(input,46,FOLLOW_46_in_include320);  
            stream_46.add(string_literal15);


            pushFollow(FOLLOW_filename_in_include322);
            filename16=filename();

            state._fsp--;

            stream_filename.add(filename16.getTree());

            // AST REWRITE
            // elements: filename
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 46:30: -> ^( INCLUDE filename )
            {
                // cs-studio/products/ITER/plugins/org.csstudio.utility.dbdparser.test/src/org/csstudio/utility/dbdparser/antlr/DbdFile.g:46:33: ^( INCLUDE filename )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(INCLUDE, "INCLUDE")
                , root_1);

                adaptor.addChild(root_1, stream_filename.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "include"


    public static class path_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "path"
    // cs-studio/products/ITER/plugins/org.csstudio.utility.dbdparser.test/src/org/csstudio/utility/dbdparser/antlr/DbdFile.g:48:1: path : String ;
    public final DbdFileParser.path_return path() throws RecognitionException {
        DbdFileParser.path_return retval = new DbdFileParser.path_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token String17=null;

        Object String17_tree=null;

        try {
            // cs-studio/products/ITER/plugins/org.csstudio.utility.dbdparser.test/src/org/csstudio/utility/dbdparser/antlr/DbdFile.g:48:6: ( String )
            // cs-studio/products/ITER/plugins/org.csstudio.utility.dbdparser.test/src/org/csstudio/utility/dbdparser/antlr/DbdFile.g:48:8: String
            {
            root_0 = (Object)adaptor.nil();


            String17=(Token)match(input,String,FOLLOW_String_in_path339); 
            String17_tree = 
            (Object)adaptor.create(String17)
            ;
            adaptor.addChild(root_0, String17_tree);


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "path"


    public static class filename_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "filename"
    // cs-studio/products/ITER/plugins/org.csstudio.utility.dbdparser.test/src/org/csstudio/utility/dbdparser/antlr/DbdFile.g:50:1: filename : String ;
    public final DbdFileParser.filename_return filename() throws RecognitionException {
        DbdFileParser.filename_return retval = new DbdFileParser.filename_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token String18=null;

        Object String18_tree=null;

        try {
            // cs-studio/products/ITER/plugins/org.csstudio.utility.dbdparser.test/src/org/csstudio/utility/dbdparser/antlr/DbdFile.g:50:10: ( String )
            // cs-studio/products/ITER/plugins/org.csstudio.utility.dbdparser.test/src/org/csstudio/utility/dbdparser/antlr/DbdFile.g:50:12: String
            {
            root_0 = (Object)adaptor.nil();


            String18=(Token)match(input,String,FOLLOW_String_in_filename348); 
            String18_tree = 
            (Object)adaptor.create(String18)
            ;
            adaptor.addChild(root_0, String18_tree);


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "filename"


    public static class menu_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "menu"
    // cs-studio/products/ITER/plugins/org.csstudio.utility.dbdparser.test/src/org/csstudio/utility/dbdparser/antlr/DbdFile.g:52:1: menu : menu_head menu_block -> ^( MENU ^( NAME menu_head ) menu_block ) ;
    public final DbdFileParser.menu_return menu() throws RecognitionException {
        DbdFileParser.menu_return retval = new DbdFileParser.menu_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        DbdFileParser.menu_head_return menu_head19 =null;

        DbdFileParser.menu_block_return menu_block20 =null;


        RewriteRuleSubtreeStream stream_menu_head=new RewriteRuleSubtreeStream(adaptor,"rule menu_head");
        RewriteRuleSubtreeStream stream_menu_block=new RewriteRuleSubtreeStream(adaptor,"rule menu_block");
        try {
            // cs-studio/products/ITER/plugins/org.csstudio.utility.dbdparser.test/src/org/csstudio/utility/dbdparser/antlr/DbdFile.g:52:6: ( menu_head menu_block -> ^( MENU ^( NAME menu_head ) menu_block ) )
            // cs-studio/products/ITER/plugins/org.csstudio.utility.dbdparser.test/src/org/csstudio/utility/dbdparser/antlr/DbdFile.g:52:8: menu_head menu_block
            {
            pushFollow(FOLLOW_menu_head_in_menu357);
            menu_head19=menu_head();

            state._fsp--;

            stream_menu_head.add(menu_head19.getTree());

            pushFollow(FOLLOW_menu_block_in_menu359);
            menu_block20=menu_block();

            state._fsp--;

            stream_menu_block.add(menu_block20.getTree());

            // AST REWRITE
            // elements: menu_block, menu_head
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 52:29: -> ^( MENU ^( NAME menu_head ) menu_block )
            {
                // cs-studio/products/ITER/plugins/org.csstudio.utility.dbdparser.test/src/org/csstudio/utility/dbdparser/antlr/DbdFile.g:52:32: ^( MENU ^( NAME menu_head ) menu_block )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(MENU, "MENU")
                , root_1);

                // cs-studio/products/ITER/plugins/org.csstudio.utility.dbdparser.test/src/org/csstudio/utility/dbdparser/antlr/DbdFile.g:52:39: ^( NAME menu_head )
                {
                Object root_2 = (Object)adaptor.nil();
                root_2 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(NAME, "NAME")
                , root_2);

                adaptor.addChild(root_2, stream_menu_head.nextTree());

                adaptor.addChild(root_1, root_2);
                }

                adaptor.addChild(root_1, stream_menu_block.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "menu"


    public static class menu_head_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "menu_head"
    // cs-studio/products/ITER/plugins/org.csstudio.utility.dbdparser.test/src/org/csstudio/utility/dbdparser/antlr/DbdFile.g:54:1: menu_head : 'menu' '(' name ')' -> name ;
    public final DbdFileParser.menu_head_return menu_head() throws RecognitionException {
        DbdFileParser.menu_head_return retval = new DbdFileParser.menu_head_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token string_literal21=null;
        Token char_literal22=null;
        Token char_literal24=null;
        DbdFileParser.name_return name23 =null;

